# KaggleTitanic.PY

./: .gitattributes  .gitignore  CHANGELOG.md  KaggleTitanic.PY.code-workspace  KaggleTitanic.code-workspace  LICENSE  Makefile  README.md  TODO.md  environment.yml  pyproject.toml
document/: _index.md  decision_tree.md
documentation/: _index.md
ipynb/: _index.ipynb  data_preprocessing.ipynb  decision_tree.ipynb  gradient_boost.ipynb  naive_decision_tree.ipynb  random_forest.ipynb  retrieve_data.ipynb  visualise_data.ipynb
notebook/: _index.ipynb  decision_tree.ipynb  naive_decision_tree.ipynb  retrieve_data.ipynb  visualise_data.ipynb
res/: decision-tree.dot  naive-decision-tree.dot  naive_decision_tree.dot
resource/: naive_decision_tree.dot
tool/: trim-notebook
