[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["AxlER8R <axl@axler8r.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
polars = "^1.11.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
xgboost = "^2.1.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
pyarrow = "^18.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
kaggle = "^1.6.17"
jupyterlab-vim = "^4.1.4"
jupyterlab-theme-solarized-dark = "^3.0.1"
autoflake = "^2.3.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
mypy = "^1.13.0"
git-cliff = "^2.6.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
